--- a/GifTastic.html
+++ b/GifTastic.html
@@ -17,10 +17,12 @@
         </div>
         
         <div class="col-4">
-            <form id="search-form">
-                <label for="search-input">Add in your search!</label>
-                <input type="text" id="search-input"><br>
-                <input type="submit" value="submit">
+            <form class="form-inline" id="search-form">
+                <!-- <label for="search-input">Add in your search!</label> -->
+                <!-- <input type="text" id="search-input"><br> -->
+                <!-- <input type="submit" value="submit"> -->
+                <input class="form-control mr-sm-2" id="search-input" type="text" placeholder="Search for a character!" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" id="add-search" type="submit" value="submit">Search</button>
             </form>
         </div>
     </div>
